# dual_lineFollow

./: CMakeCache.txt  CMakeLists.txt  Doxyfile  LowPassFilter.hpp  Makefile  README.md  bandpass.h  cmake_install.cmake  doxyMainPage.md  dualRoboNet  errorSuccessData.csv  external.cpp  external.h  main.cpp  neural.cpp  neural.h  predictor.csv  serialib.cpp  speedDiffdata.csv  successTime.csv  wL1.csv  weight_distances.csv
Arduino/sumobot_sketch/: sumobot_sketch.ino
FCL/: CMakeLists.txt  fcl.cpp  fcl.h  fcl_util.cpp  fcl_util.h
FCL/fclNet/: bandpass.cpp  layer.cpp  layer.h  neuron.cpp
Plotting/: FCLwL.csv  errorSuccessData.csv  plotBox.py  plotRobot.py  plotRobotClass.py  speedDiffdata.csv  successTime.csv  wL1.csv  weight_distances.csv
Plotting/BCL/2e_1p0/2e_1p0_run1/: errorSuccessData.csv
Plotting/BCL/2e_1p0/2e_1p0_run1/figs/: error  wL1
Plotting/BCL/boxplots/: boxplot1  boxplot2
Plotting/BCL/learning/ActualLearning?/L0.2_R1.9_L1.1_run1/: errorSuccessData.csv  speedDiffdata.csv  successTime.csv  wL1.csv
Plotting/BCL/learning/Map 1/L0.2_R1.9_N1.1_run1/: speedDiffdata.csv  wL1.csv
Plotting/BCL/learning/Map 1/L0.2_R1.9_N1.2_run1/: errorSuccessData.csv  successTime.csv
Plotting/BCL/learning/Map 1/L0.2_R1.9_N1.2_run2/: errorSuccessData.csv  plotRobotClass.py  predictor.csv  speedDiffdata.csv  successTime.csv  wL1.csv  weight_distances.csv
Plotting/BCL/learning/Map 1/L0.2_R1.9_N1.2_run3/: errorSuccessData.csv  predictor.csv  speedDiffdata.csv  successTime.csv  wL1.csv  weight_distances.csv
Plotting/BCL/learning/Map 2/L2e-2_11Lay_ (1,3,5)_run1/: errorSuccessData.csv  predictor.csv  speedDiffdata.csv  successTime.csv  wL1.csv  weight_distances.csv
Plotting/BCL/learning/Map 2/L2e-2_11Lay_ (2,5,8)_run1/: errorSuccessData.csv  predictor.csv  speedDiffdata.csv  successTime.csv  wL1.csv  weight_distances.csv
Plotting/BCL/reflex/Map 1/reflex_run1/: predictor.csv  weight_distances.csv
Plotting/BCL/reflex/Map 2/: errorSuccessData.csv
Plotting/BCL/robonet_plots/: errorSuccessData.csv  plotRobot.py  predictor.csv  speedDiffdata.csv
Plotting/BCL/robonet_plots/2e_1p0/2e_1p0_run1/: wL1.csv  (+3 more)
Plotting/BCL/robonet_plots/boxplots/: plotBoxes.py
Plotting/BCL/robonet_plots/tracking/: trackR
Plotting/BCL/tracking/: learningTracking.csv  reflextracking.csv  tracking.py
clBP/: Makefile  cmake_install.cmake
clBP/include/clbp/: Neuron.h
clBP/lib/: Layer.cpp  Net.cpp  Neuron.cpp
(+473 files in other folders)
